--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -21,9 +21,10 @@ level = error warn info debug
 # server_allow_reuse_address = 
 
 [ApplicationServer]
-# multithread = 
-# use thread system instead of multi processing
-# default is 0
+# thread_count = 
+# Define the number of processes used by the Application Server
+# or 'auto' for an automatic detection
+# default is 1
 #
 # checkShell =
 # Consider that a session is an ulteo session 
